--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,9 @@ output: html_document
 
 # **Description**
 
-This is a template example for lab journaling. Students in Matt Crump's Human Cognition and Performance Lab will use this template to learn R, and other things. Students can replace this text with more fun things. People not in my lab can use this too.
+Every organization has hidden insights in the data they collect.
+My goal is to use my knowledge of statistics, data collection,data analytics and interpretation to help organizations use their data
+to make better decisions.
 
 
 
