--- a/Portfolio1.Rmd
+++ b/Portfolio1.Rmd
@@ -24,7 +24,7 @@ Homeownership is an effective wealth generating tool. According to a study condu
 
 
 ## 1.1: Data
-
+Analysis began by gathering data from the Consumer Financial Protection Bureau. 
 
 ## 1.2: Methods
 
