--- a/Portfolio1.Rmd
+++ b/Portfolio1.Rmd
@@ -57,7 +57,10 @@ After obtaining the overall breakdown of loan approvals and denials, the analysi
 The data wrangling process began by checking for errors, missing data, outliers, and testing assumptions. The table function in R was used to examine categorical variables for miscoded data and mislabeled categories. Fortunately, there were no issues with categorical variables. Next, the summary function identified which continuous variables had missing values. The variable applicant_income_000s had 1306 missing values. To solve this problem, an imputation function imputed values to the missing data. Once that problem was solved, graphical analysis and test of normality indicated that the variables applicant_income_000s and loan_amount_000s had to be transformed to reduce skewness. The log transformation succesfully completed this task. And lastly, categorical variables were converted to binary variables.
 
 # 4: Modeling
-Often, models are used to understand how an independent variable affects a dependent variable. In this situation, logistic regression was used to determine if the probability for loan approval was different for non-minorities and minorities when income and loan amount is eqaul.
+Often, models are used to understand how an independent variable affects a dependent variable. In this situation, logistic regression was used to determine if the odds for loan approval was different for non-minorities and minorities when income and loan amount are equal. 
+
+## 4: 1
+
 
 ## Appendix
 ### Chi-square test
