--- a/Portfolio1.Rmd
+++ b/Portfolio1.Rmd
@@ -52,7 +52,7 @@ After observing the overall breakdown of loan approvals and denials, the analysi
 ## 2:3
 To drill down into the data further, applicant's income was placed into low, medium, and high categories. Less than $ 60,000 was considered low, income between 60,000 and 113,000 dollars was labeled medium, and greater than 113,000 dollars was considered high.Figure 3 shows loan approval for minorities with low, medium, and high incomes visibly different than non-minorities. For example, the three way cross table indicated that minorites with low income have an average probability of 70.5 % to receive a loan approval, while non-minorities a 78.7 % chance to get a loan. Further more, when controlling for high income, minorities have an 82.7 % chance to obtain a loan, and non-minorities an 88.6 % probability of receiving a loan.
 
-![](images/race_income.png)
+![](images/race_inc_2.2.png)
 
 
 
